
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-beta-5 ($LastChangedRevision$, $LastChangedDate$)
====================================
- [#MODX-1326] Fixed the access denied logout form, added styling
- [#MODX-1423] Fixed error with duplicating a template
- [#MODX-1409], [#MODX-919] Fixed issue where tag symbols were being stripped in Elements and breaking filtering and nested tag functionality
- [#MODX-1347] Fixed user validation for username missing error
- Extrapolated RTE logic to make it generic
- Added OnRichTextBrowserInit to allow for 3rd Party RTEs to hook into MODx.Browser
- Added system setting "allow_multiple_users_per_email" to allow users to have a single email shared across users. Defaults to true.
- [#MODX-972] Fixed bug when property description was changed, grid wasnt updating
- [#MODX-1390] Fixed docs for $modx->sendUnauthorizedPage();
- [#MODX-895] Fixed possible rendering issue with error log scroll bar
- Optimized setup pre-install checks, now checks both mysql client and server versions
- [#MODX-1404] Fixed mysql version checks to only show a warning if the client/server is incorrectly setup to where PHP cannot determine the versions. 
- Package Management now restricts downloading/updating Extras to their supported MODx versions (ie, you can't download packages that support only beta-3 if you have beta-4 or beta-2)
- [#MODX-1310] Fixed expand/collapse toolbar items in trees
- [#MODX-1361] Make sure cache (including Smarty files) is cleared after install 
- [#MODX-1372],[#MODX-1376] Marked deprecated functions as so in phpdoc comments
- [#MODX-1378] Fixed bug with adding a None role to a user group in the User -> Access Permissions tab
- [#MODX-1375] Fixed documentation for modX.getRequest
- [#MODX-1374] Fixed documentation for modX.getRegisteredClientScripts